applications/longhorn/overlay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: longhorn.herginnies.world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              name: http
